--- a/SpringSecurityDemo/src/main/resources/application.properties
+++ b/SpringSecurityDemo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/springsecuritydemo?useSSL=false
-spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.username=example_user
-spring.datasource.password=password123
+spring.datasource.url=jdbc:mysql://localhost:3306/springSecurityDemo?useSSL=false
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=ISBN97859910
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.show-sql=true
